--- a/src/app/components/skills/damage-skill/damage-skill.component.html
+++ b/src/app/components/skills/damage-skill/damage-skill.component.html
@@ -16,10 +16,15 @@
       <mat-card>
         <mat-input-container>
           <span matPrefix>{{ 'COMPONENTS__SKILLS__DAMAGE__DAMAGE_PREFIX' | translate }}</span>
-          <input matInput [placeholder]="'COMPONENTS__SKILLS__DAMAGE__DAMAGE' | translate"
-                 [value]="upgrade.damage" type="text" pattern="[+-][0-9]+(\.[0-9]+)?"
-                 (blur)="update(skilltree, upgrade, 'damage', $event.srcElement.value)">
+          <input matInput [placeholder]="'COMPONENTS__SKILLS__DAMAGE__DAMAGE' | translate" type="text"
+                 pattern="[+-][0-9]+(\.[0-9]+)?"
+                 [name]="'damage_' + i" #modelDamage="ngModel"
+                 [ngModel]="upgrade.damage ? upgrade.damage : '+0'"
+                 (blur)="update(skilltree, upgrade, 'damage', $event.srcElement.value, modelDamage)">
           <span matSuffix>{{ 'COMPONENTS__SKILLS__DAMAGE__DAMAGE_SUFFIX' | translate }}</span>
+          <mat-error *ngIf="modelDamage.errors?.pattern">
+            {{ 'COMPONENTS__SKILLS__ERROR_FORMAT' | translate:{format: '[+-][double]'} }}
+          </mat-error>
         </mat-input-container>
         <button mat-icon-button [stcDynamicPopoverAnchorFor]="damagePopover">
           <mat-icon svgIcon="info_outline">info_outline</mat-icon>
