--- a/src/app/components/skills/ranged-skill/ranged-skill.component.html
+++ b/src/app/components/skills/ranged-skill/ranged-skill.component.html
@@ -31,9 +31,14 @@
         <mat-input-container>
           <span matPrefix>{{ 'COMPONENTS__SKILLS__RANGED__DAMAGE_PREFIX' | translate }}</span>
           <input matInput [placeholder]="'COMPONENTS__SKILLS__RANGED__DAMAGE' | translate"
-                 [value]="upgrade.damage" type="text" pattern="[+-][0-9]+(\.[0-9]+)?"
-                 (blur)="update(skilltree, upgrade, 'damage', $event.srcElement.value)">
+                 pattern="[+-][0-9]+(\.[0-9]+)?"
+                 [name]="'damage_' + i" #modelDamage="ngModel"
+                 [ngModel]="upgrade.damage ? upgrade.damage : '+0'"
+                 (blur)="update(skilltree, upgrade, 'damage', $event.srcElement.value, modelDamage)">
           <span matSuffix>{{ 'COMPONENTS__SKILLS__RANGED__DAMAGE_SUFFIX' | translate }}</span>
+          <mat-error *ngIf="modelDamage.errors?.pattern">
+            {{ 'COMPONENTS__SKILLS__ERROR_FORMAT' | translate:{format: '[+-][double]'} }}
+          </mat-error>
         </mat-input-container>
         <button mat-icon-button [stcDynamicPopoverAnchorFor]="damagePopover">
           <mat-icon svgIcon="info_outline">info_outline</mat-icon>
@@ -42,11 +47,15 @@
       <mat-card>
         <mat-input-container>
           <span matPrefix>{{ 'COMPONENTS__SKILLS__RANGED__RATE_PREFIX' | translate }}</span>
-          <input matInput [placeholder]="'COMPONENTS__SKILLS__RANGED__RATE' | translate"
-                 [value]="upgrade.rate ? upgrade.rate : '+0'" type="text"
-                 pattern="[+-][0-9]+(\.[0-9]+)?"
-                 (blur)="update(skilltree, upgrade, 'rate', $event.srcElement.value)">
+          <input matInput [placeholder]="'COMPONENTS__SKILLS__RANGED__RATE' | translate" type="text"
+                 pattern="[+-][0-9]+"
+                 [name]="'rate_' + i" #modelRate="ngModel"
+                 [ngModel]="upgrade.rate ? upgrade.rate : '+0'"
+                 (blur)="update(skilltree, upgrade, 'rate', $event.srcElement.value, modelRate)">
           <span matSuffix>{{ 'COMPONENTS__SKILLS__RANGED__RATE_SUFFIX' | translate }}</span>
+          <mat-error *ngIf="modelRate.errors?.pattern">
+            {{ 'COMPONENTS__SKILLS__ERROR_FORMAT' | translate:{format: '[+-][integer]'} }}
+          </mat-error>
         </mat-input-container>
         <button mat-icon-button [stcDynamicPopoverAnchorFor]="ratePopover">
           <mat-icon svgIcon="info_outline">info_outline</mat-icon>
@@ -56,7 +65,7 @@
         <mat-form-field>
           <mat-select [placeholder]="'COMPONENTS__SKILLS__RANGED__PROJECTILE' | translate"
                       [value]="upgrade.projectile|| 'Arrow'"
-                      (change)="update(skilltree, upgrade, 'projectile', $event.value)">
+                      (change)="update(skilltree, upgrade, 'projectile', $event.value, {})">
             <mat-option value="Arrow">
               {{ 'COMPONENTS__SKILLS__RANGED__PROJECTILE__ARROW' | translate }}
             </mat-option>
