fix i18n keys for the about page

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>{{ 'COMPONENTS__ABOUT' | translate }}</mat-toolbar>
+<mat-toolbar>{{ 'COMPONENTS__ABOUT__ABOUT' | translate }}</mat-toolbar>
 <div>
   <p class="bold">MyPet - SkilltreeCreator</p>
   <p>Version: {{ version }}</p>
@@ -10,7 +10,7 @@
     <img alt="Germany" src="/assets/img/de.svg" matTooltip="Germany" matTooltipPosition="right">
   </p>
 </div>
-<mat-toolbar>{{ 'COMPONENTS__LIBRARIES' | translate }}</mat-toolbar>
+<mat-toolbar>{{ 'COMPONENTS__ABOUT__LIBRARIES' | translate }}</mat-toolbar>
 <mat-list role="list">
   <mat-list-item>
     <h4 mat-line class="bold">Angular</h4>
